--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -188,6 +188,8 @@ body {
 }
 /*____________________________________________________________________________________________________________________*/
 .recipesField{
+    position: absolute;
+    top: 15vh;
     width: 55.21vw;
     height: 75.926vh;
     background-color: #F2E3B3;
