--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -41,11 +41,12 @@
 </header>
 
 <main>
+    <h1 class="boardTwoTitle">Filters</h1>
     <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
     <button class="apply-button"><span>Apply</span></button>
     <div class="ulBoard">
+        <div class="h1"></div>
         <ul>
-            <h1 class="h1">Filters</h1>
             <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
                 Categories</li>
             <hr>
