--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -75,9 +75,9 @@
 <div class="container">
     <div class="menu">
         <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
+        <h1 class="boardOneTitle">Categories</h1>
         <div class="ul">
             <ul>
-                <h1 class="h1">Categories</h1>
                 <a th:href="@{/allRecipes(category= Soup )}">
                 <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >
                     First dishes</li>
