--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -83,7 +83,7 @@
     <div id="overlay-support" onclick="hideOverlay()"></div>
 
     <div class="window" id="popup-window">
-        <div class="inner-window">
+        <div class="search-form inner-window">
             <input name="query" placeholder="Enter feedback" type="text">
         </div>
 
