--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -134,9 +134,10 @@ input {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: 1.04167vw;
-    margin-top: 1.852vh;
+    margin-left: 1.9vw;
+    margin-top: 2.5vh;
     margin-right: 1.7vw;
+    z-index: 1;
 }
 
 .h1 {
@@ -150,17 +151,28 @@ input {
     margin-bottom: 44.25vh;
 }
 
+.boardOneTitle{
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw; /*42*/
+    color: #733506;
+    width: 3vw;
+    height: 4vh;
+    margin-left: 2.7vw;
+    margin-top: -63.5vh;
+    z-index: 5;
+}
+
 .ul {
     position: absolute;
-    top: 13.889vh;
-    height: 48vh;
+    top: 19vh;
+    height: 44vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
     font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
     padding-left: 0.2605vw;
-    margin-top: 1vh;
+    margin-top: 0.5vh;
 }
 
 ul {
