--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -39,10 +39,10 @@ body {
     border: none;
     background: #FBEFC7;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.5vh;
     font-size: 2.5vw;
     border-radius: 5.5vh;
     outline: none;
+    autocomplete: off;
 }
 
 .login-heading {
@@ -66,10 +66,6 @@ body {
     border-radius: 5.5vh;
     outline: none;
     padding-left: 1vw;
-}
-
-input {
-    autocomplete: off;
 }
 
 .magnifier{
@@ -97,7 +93,7 @@ input {
     height: 5.5555vh;
 }
 
-.heart-container, .user-container, .heart-login-container {
+.heart-container, .user-container, .heart-login-container, .user-login-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,7 +104,7 @@ input {
     background-color: #F2E3B3;
 }
 
-.user-container:hover, .heart-container:hover {
+.user-container:hover, .heart-container:hover, .user-login-container {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
@@ -287,7 +283,6 @@ ul hr {
 
 a:link, a:visited {
     text-decoration: none;
-    color: inherit;
 }
 
 /*____________________________________________________________________________________________________________________*/
