--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -19,7 +19,7 @@
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
 
-        <div class="heart-container">
+        <div class="user-container heart-container">
             <div class="heart"
                  onmouseover="changeImage('heart-img', '../../images/heart-login-hover.svg')"
                  onmouseout="restoreImage('heart-img', '../../images/heart-login.svg')">
@@ -29,9 +29,9 @@
 
         <button class="user-container" id="user-btn">
             <div class="user"
-                 onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
-                 onmouseout="restoreImage('user-img', '../../images/user.svg')">
-                <img id="user-img" th:src="@{images/user.svg}" src="../../images/user.svg" alt="user" class="user">
+                 onmouseover="changeImage('user-img', '../../images/user-login-hover.svg')"
+                 onmouseout="restoreImage('user-img', '../../images/user-login.svg')">
+                <img id="user-img" th:src="@{images/user-login.svg}" src="../../images/user-login.svg" alt="user" class="user">
             </div>
         </button>
 
