--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -4,7 +4,7 @@
     <title>Main page</title>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="../../static/css/main.css" rel="stylesheet" th:href="@{css/main.css}" type="text/css">
+    <link href="../../static/css/main.css" rel="stylesheet" th:href="@{/css/main.css}" type="text/css">
 </head>
 <body>
 <header>
