--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -17,7 +17,7 @@
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
 
-        <div class="heart-container">
+        <div class="user-container heart-container">
             <div class="heart"
                  onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')"
                  onmouseout="restoreImage('heart-img', '../../images/heart.svg')">
