--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -75,10 +75,14 @@ body {
     border-radius: 50%;
 }
 
-.user-container:hover, .heart-container:hover {
+.user-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
+}
+
+.heart-container:hover{
+    cursor: not-allowed;
 }
 
 .home{
