--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -50,7 +50,6 @@ body {
     right: 9.58vw;
     bottom: 21.5vh;
     font-family: 'Frank Ruhl Libre';
-    font-size: 2vh;
     font-size: 2vw;
 }
 
@@ -104,10 +103,14 @@ body {
     background-color: #F2E3B3;
 }
 
-.user-container:hover, .heart-container:hover, .user-login-container {
+.user-container:hover, .user-login-container {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
+}
+
+.heart-container:hover{
+    cursor: not-allowed;
 }
 
 .heart-login-container:hover{
