--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -52,7 +52,11 @@
         <div class="recipeCategory"></div>
         <div class="recipeIngredients"></div>
         <div class="recipeIngredientsAmount"></div>
-        <div class="recipeDevices"></div>
+        <form class="text-form">
+            <div class="recipeDevices"></div>
+                <input name="query" placeholder="Recipe title" type="text">
+            </div>
+        </form>
         <div class="recipeStepByStep"></div>
 
         <div class="previewButton"></div>
