--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -21,8 +21,7 @@
         <div class="heart-container">
             <div class="heart"
                  onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')"
-                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')"
-            >
+                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')">
                 <img id="heart-img" src="../../images/heart.svg" alt="heart" class="heart">
             </div>
         </div>
@@ -30,8 +29,7 @@
         <div class="user-container">
             <div class="user"
                  onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
-                 onmouseout="restoreImage('user-img', '../../images/user.svg')"
-            >
+                 onmouseout="restoreImage('user-img', '../../images/user.svg')">
                 <img id="user-img" src="../../images/user.svg" alt="user" class="user">
             </div>
         </div>
@@ -41,28 +39,6 @@
         </a>
     </div>
 </header>
-<!--<p th:text="${recipe.getDescription()}"></p>
-<a th:href="@{/allRecipes(category=${recipe.getCategory().getTitle()})}"
-   th:text="${recipe.getCategory().getTitle()}"></a>
-<p th:text="${recipe.getAverageMark()}"></p>
-<table th:each="devices: ${recipe.getRecipeDevices()}">
-    <tr>
-        <td th:text="${devices.cookingDevice.getName()}"></td>
-    </tr>
-</table>
-<table th:each="ingedients: ${recipe.getRecipeIngredients()}">
-    <tr>
-        <td><a th:href="@{/allRecipes(ingedient=${ingedients.ingredient.getName()})}"
-               th:text="${ingedients.ingredient.getName()}"></a>
-        </td>
-        <td th:text="${ingedients.getAmountOfIngredient()}">
-        </td>
-    </tr>
-</table>
-<table th:each="comment : ${recipe.getComments()}">
-    <tr th:text="${comment.getUser().getId()}"></tr>
-    <tr th:text="${comment.getText()}"></tr>
-</table>-->
 
 <main>
     <img alt="recipeIcon" class="recipeIcon" th:src="@{../images/Recipe.svg}" src="../../images/Recipe.svg" >
@@ -123,9 +99,7 @@
 
         <input name="startWith" placeholder="Add comment" type="text">
 
-        <div class="publish">
-            <p class = "c8">Publish</p>
-        </div>
+        <button id="publish">Publish</button>
     </form>
     <div class="commentField">
         <div th:each="comment, commentStat : ${recipe.getComments()}"
@@ -221,9 +195,7 @@
 
     <div class="window" id="popup-window">
         <div class="inner-window">
-            <label>
-                <input name="query" placeholder="Enter feedback" type="search">
-            </label>
+            <input name="query" placeholder="Enter feedback" type="search">
         </div>
 
         <button id="send-button">Send</button>
@@ -234,8 +206,7 @@
     <div class="circle-container telegram-container">
         <div class="telegram"
              onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
-             onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
-        >
+             onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')">
             <img id="telegram-img" src="../../images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
@@ -243,8 +214,7 @@
     <div class="circle-container instagram-container">
         <div class="instagram"
              onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
-             onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
-        >
+             onmouseout="restoreImage('instagram-img', '../../images/inst.svg')">
             <img id="instagram-img" src="../../images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
